[package]
name = "bls_ckd"
version = "0.2.0"
authors = ["austinabell <austinabell8@gmail.com>, traffictse <traffictse@gmail.com>"]
edition = "2018"
description = "BLS child key derivation"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/taiyi-research-institute/rust-bls-derivation"
documentation = "https://github.com/taiyi-research-institute/rust-bls-derivation/blob/master/README.md"
repository = "https://github.com/taiyi-research-institute/rust-bls-derivation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv = { package = "curv-kzen", version = "0.10", default-features = false, features = ["num-bigint"] }
sha2 = "0.10.6"
hkdf = "0.12.3"
hex = "0.3.1"

[patch.crates-io]
rust-gmp = { version = "0.5.1", features = ["serde_support"], git = "https://github.com/KZen-networks/rust-gmp" }

[profile.release]
opt-level = 2
